     Divide and Conquer, Hamlets, Hornshark Island, Meteor Lake, Silverhead 
     Crossing, The Wilderlands, Triple Blitz
 * WML improvements
   * moved much of about into WML as well as enabled campaign [about]
   * added a #undef preprocessor directive
   * added 'profile' key to [unit] variables
   * added [label] inside [event]
   * attack animations can now be filtered on hit an miss
 * miscellaneous
   * added a --load FILE command-line option, where FILE is a saved game
     in the standard save game directory.
   * reordered macro calls in game.cfg to fix no-AMLA bug for campaigns
   * {abilities.cfg} call moved from utils.cfg to game.cfg for consistency
   * Send message on player ban or kick
   * Show a message when a player leaves a game.
   * WML-generated units with "random_traits" now show the traits description
   * flags on village don't "flicker" at the end of their animations
   * really fix bug 3388, now really centering on image when clicking it
   * tab completion now completes to smallest substring, and show possoble
   completions
   * added whisper support for lobby and observers in game
   
Version 1.1.1:
 * campaigns
   * reordered ranks to reflect relevance to game world
   * new (beginner) campaign: Two Brothers
   * Heir to the Throne
     * Gryphons are not available until you find dwarves to ride them
     * Fixed behavior of sleeping gryphons in Gryphon Mountain
     * Changed confusing dialog on Home of the North Elves (#5006)
     * Standardized wording for bonus victory objectives
     * Lost General map now slightly more friendly to smallfoot units
     * Sceptre of Fire - more villages and dirt road near starting castle
     * Underground scenarios generally more interesting/enhanced story
     * Text cleanups
   * The Rise of Wesnoth
     * replaced Sea Orc with Naga Fighter in Final Spring, Clearwater Port, and
       Rise of Wesnoth
     * Fire dragon is a level 5 unit
     * Text cleanups