@@ -35,6 +35,7 @@ SVN trunk (1.1.1+svn):
    * added 'profile' key to [unit] variables
    * added [label] inside [event]
    * attack animations can now be filtered on hit an miss
+   * [effect] can modify attack/defense weight
  * miscellaneous
    * added a --load FILE command-line option, where FILE is a saved game
      in the standard save game directory.
